# autotrain-advanced

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.app  Dockerfile.base  Dockerfile.dev  Makefile  Manifest.in  Photo of Chitra  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  tailwind.config.js  test-autotrain.py  test.csv
.github/: deploy_doc.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md
.github/workflows/: build_and_push.yml  build_and_push_ngc.yml  build_and_push_nvcf.yml  build_documentation.yml  docker.yml  (+10 more)
__.github/: deploy_doc.sh
autoreply/: README.md  adapter_config.json  app.py  training_params.json
colabs/: AutoTrain.ipynb  AutoTrain2.ipynb  AutoTrain_Dreambooth.ipynb  AutoTrain_LLM.ipynb  AutoTrain_ngrok.ipynb  config.yml  image_classification.ipynb
css/: style.css
docs/: README.md  binary_classification.rst  conf.py  entity_extraction.rst  extractive_question_answering.rst  index.rst  installation.rst  multi_class_classification.rst  single_column_regression.rst  speech_recognition.rst  summarization.rst  supported_languages.rst  supported_tasks.rst  training_hub_model.rst
examples/: README.md  text_classification.py  text_classification_multiclass.py
m7b-guanaco/: training_params.json
notebooks/: llm_finetuning.ipynb  python_example.py  text_classification.ipynb  text_regression.ipynb
op-dreambooth-nn3/: training_params.json
scripts/: autonlp
templates/: error.html  index.html  llm.html  submission_response.html
(+393 files in other folders)
