[metadata]
license_files = LICENSE
version = attr: autotrain.__version__

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[flake8]
ignore = E203, E501, W503
max-line-length = 119
per-file-ignores =
    # imported but unused
    __init__.py: F401, E402
exclude =
    .git,
    .venv,
    __pycache__,
    dist